# DV-ElecGenFlow

./: .gitignore  CHANGELOG.md  CHECKLIST.md  CONTRIBUTING.md  DV-ElecGenFlow.txt  README.md  pyproject.toml
.github/workflows/: ci.yml
configs/: default_ar.yaml
docs/: CHECKLIST.md  ROADMAP.md
docs/adr/: ADR-0001.md  ADR-0002.md  ADR-0003.md  ADR-0004.md  ADR-0005.md  ADR-0006.md  ADR-0007.md  ADR-0008.md
docs/backlog/: 00_CHECKLIST.md  01_PRODUCT_BACKLOG.md  01_ROADMAP.md  02_PRODUCT_BACKLOG.md  02_SPRINT_BACKLOG.md  03_ISSUE_LOG.md  03_SPRINT_BACKLOG.md  04_COMMIT_LOG.md  05_COMMIT_LOG.md  05_RELEASE_LOG.md  06_MERGE_REQUEST.md  06_RELEASE_LOG.md  99_CHANGELOG.md
docs/epics/: EPIC-03.00-elecboard-ir.md  EPIC-04.00-DSL_Registry_Integration_Layer.md  EPIC-04.01-Dimensioning-and-Normative-Framework.md  EPIC-3-elecboard-ir.md
docs/specs/: CostModel.md  DesignProblem.md  Metrics.md  Registry.md  ReleaseProcess.md  ReportFormat.md  Rules.md
examples/: elecboard_ir_minimal.json  problem_minimal.json
examples/fluent/: project_owner.py
src - Copy/: init.py  network.py
src - Copy/core/: config.py
src - Copy/elecboard/: ir.py  types.py  validators.py
src - Copy/engineering/: load_aggregation.py  nominal_tables.py
src - Copy/ingest/: __init__.py  registry_bootstrap.py
src - Copy/reporting/: __init__.py  pdf_report.py
src/elecgenflow/: __init__.py  __main__.py  init.py  project_runner.py
src/electro_core/: __init__.py  board_assembly.py  compute.py  dsl.py  network.py
tests/unit/: test_constraints_defaults.py  test_design_problem_validation.py  test_elecboard_ir_validation.py  test_engine_config_power_factor_default.py  test_epic_0400_adapter_to_ir.py  test_epic_0400_network_compiler.py  test_epic_0402_dag.py  (+13 more)
(+56 files in other folders)
