[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "elecgenflow"
version = "0.2.0"
description = "EPyengFlow: Generative Design Engine (MT/BT) - core domain contracts and validation"
readme = "README.md"
requires-python = ">=3.10,<3.13"
license = { file = "LICENSE" }
authors = [{ name = "ElecGenFlow Contributors" }]
keywords = ["electrical", "engineering", "mt", "bt", "pandapower", "ddd", "optimization"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]

dependencies = [
  "pandapower>=2.13",
  "numpy>=1.26",
  "pandas>=2.2",
  "scipy>=1.11",
  "pydantic>=2.7",
  "pydantic-settings>=2.2",
  "pyyaml>=6.0",
  "matplotlib>=3.8",
  "seaborn>=0.13",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "ruff>=0.5",
  "black>=24.4",
  "mypy>=1.10",
  "types-PyYAML>=6.0.12",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.ruff]
line-length = 100
target-version = "py310"
fix = false
show-fixes = true
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "N", "A", "C4", "T20", "RUF"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_unused_configs = true
mypy_path = ["src"]
exclude = ["^docs/"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --disable-warnings --maxfail=1"

[tool.coverage.run]
branch = true
source = ["elecgenflow"]

[tool.coverage.report]
fail_under = 80
show_missing = true
skip_empty = true
